  * manpage-alert: Fix handling of commands which start with non-word
    characters.  Based on a patch from Ville Skyttä.

  [ Adam D. Barratt ]
  * bts:
    + Make "tags NNNNNN =" operate correctly again.  (Closes: #539688)

  [ Patrick Schoenfeld ]
  * Add an example for githubredir.debian.net to the uscan manpage
    (Closes: #539923)

 -- Patrick Schoenfeld <schoenfeld@debian.org>  Wed, 05 Aug 2009 11:40:49 +0200

devscripts (2.10.53) unstable; urgency=low

  The "Debconf fish!" upload

  [ Adam D. Barratt ]
  * bts:
    + Add a missing "use IO::File" to make "bts select file:foo" work.
      Thanks, Raphaël Hertzog.  (Closes: #538288)
    + Add the "affects" command to mark a bug as affecting packages other
      than the package it was filed against.
  * checkbashisms: Detect the use of "source" when the sourced filename
    contains a tilde (Closes: #528592) or consists of a single character
    (Closes: #535252).  Thanks, Raphael Geissert and Ryan Niebur.
  * debcommit: Add darcs support.  Thanks to Joachim Breitner for the patch.
    (Closes: #536037)
  * nmudiff:
    + Fix specification of BCc to control@bugs so that it's interpreted
      as an option to mutt and not as a recipient address.  Thanks, Filippo
      Giunchedi.  (Closes: #534585)
    + Add a missing "feel" to the delayed/XX template.  Thanks, Raphael
      Geissert.
  * rmadison:
    + Add patch from Ubuntu to make lookups against their database work again.
      (The server moved from people.ubuntu.com to people.canonical.com)
      (Closes: #537302)
    + When using curl, follow redirects by default.  (Also from the Ubuntu
      patch).
  * debian/control: Replace descriptions of cvs-* with those from README,
    because they're better.

  [ Patrick Schoenfeld ]
  * bts: Implement a --mutt parameter, which allows mails to be sent
    using mutt.
  * debchange: Implement a dist indication mechanism that parses
    an 'Upload to $DIST' line and sets the distribution accordingly, when