@@ -685,6 +685,17 @@ EOF
 
 EOF
 	fi
+
+	if dpkg --compare-versions "$2" lt 2.10.54
+	then
+	    cat >> /etc/devscripts.conf << EOF
+#### debdiff option added in 2.10.54
+#
+# Unpack tarballs found in the top level source directory.
+# DEBDIFF_UNPACK_TARBALLS=yes
+
+EOF
+	fi
     fi
 fi
 
